<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:orientation="vertical">

    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/tv_login_name"
            android:textSize="14dp"
            />

        <EditText
            android:id="@+id/id_et_login_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:inputType="text"
            />

    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/et_interests"
            android:layout_gravity="bottom"
            android:textSize="14dp"
            />

        <CheckBox
            android:id="@+id/id_cb_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_music"
            android:layout_gravity="bottom"
            android:textSize="14dp"
            />
        <CheckBox
            android:id="@+id/id_cb_pcgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_PCgame"
            android:textSize="14dp"
            android:layout_gravity="bottom"/>
        <CheckBox
            android:id="@+id/id_cb_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_sports"
            android:textSize="14dp"
            android:layout_gravity="bottom"/>
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_register"
            android:id="@+id/id_bt_register"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/bt_reset"
            android:id="@+id/id_bt_reset"/>
    </LinearLayout>



</LinearLayout>